--- a/app/src/main/res/values/arr.xml
+++ b/app/src/main/res/values/arr.xml
@@ -4,6 +4,6 @@
         <item>LIST1</item>
         <item>LIST2</item>
         <item>LIST3</item>
-        <item>LIST4</item>
+        <item>LIST4test</item>
     </string-array>
 </resources>
