--- a/app/src/main/res/layout/mypage.xml
+++ b/app/src/main/res/layout/mypage.xml
@@ -30,7 +30,9 @@
         android:text="60% 정복!\n100개 중 60개 완주"
         android:textAlignment="center"
         android:textSize="28dp"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        android:onClick="gomountlist"
+        android:id="@+id/gomount"/>
 
     <ProgressBar
         android:id="@+id/progress2"
@@ -64,7 +66,8 @@
         android:background="#3498db"
         android:text="더보기"
         android:textColor="#FFFFFF"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        android:onClick="gonotelist"/>
 
     <Button
         android:layout_width="155dp"
